Fixed overflow of bio section text (hopefully)

--- a/weeping-cat-landing-page-master/src/Components/Body/BioSection.css
+++ b/weeping-cat-landing-page-master/src/Components/Body/BioSection.css
@@ -20,6 +20,11 @@
     padding-top: 10%;
 }
 
+.adjust-margin {
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
 .grayscale-img {
   filter: gray; /* IE6-9 */
   -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
